# aiterminal

./: .gitignore  AGENTS.md  BUILD_GUIDE.md  CLAUDE.md  CONTEXT_OPTIMIZATION_ANALYSIS.md  DESIGN_TOKEN_IMPLEMENTATION.md  DEV_GUIDE.md  ENVIRONMENT_SETUP.md  LOGGING_SYSTEM.md  MEMORY_LEAK_AUDIT.md  MEMORY_LEAK_FIXES.md  QUICKSTART.md  README.md  REFACTORING_PHASE1_COMPLETE.md  SECURITY_FIXES_DAY1.md  SECURITY_FIXES_DAY2-3.md  SECURITY_FIXES_DAY6-7.md  SECURITY_FIX_COMMAND_INJECTION.md  STYLING_GUIDELINES.md  WEEK2_SUMMARY.md  activate-env.sh  aiterminal-chat-verbose-1769926798040.md  environment-linux.yml  environment-macos.yml  environment.yml  package-lock.json  package.json  setup-env.sh  vite.config.ts  vitest.config.ts
docs/: AI_Panel.md  (+26 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/shell-integration/: bash_init.sh  bash_init.sh.backup  bash_init.sh.bak  ssh_helper.sh  zshrc
src-tauri/src/: ai.rs  context_index.rs  health_check.rs  history.rs  keychain.rs  lib.rs  lib.rs.backup  llm.rs  main.rs  models.rs  preview.rs  pty.rs  quick_actions.rs  secret_scanner.rs  sessions.rs  settings.rs  ssh.rs  tools.rs
src-tauri/src/autocomplete/: engine.rs  mod.rs
src-tauri/src/chat/: commands.rs  helpers.rs  mod.rs
src-tauri/src/pty/: commands.rs  integration.rs  mod.rs  osc_parser.rs  reader.rs  shell.rs  spawn.rs
src-tauri/src/security/: path_validator.rs
src-tauri/src/tests/: concurrency_tests.rs  fuzz_tests.rs  helpers.rs  integration_tests.rs  mod.rs  security_tests.rs
(+215 files in other folders)
