[package]
name = "aiterminal"
version = "0.1.0"
description = "AI Terminal - A modern terminal emulator with AI integration for HPC and research computing"
authors = ["Charlie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aiterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9.0"
base64 = "0.22.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
keyring = { version = "3.6.1", features = ["apple-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
notify = "7.0"
notify-debouncer-mini = "0.5"
uuid = { version = "1.11", features = ["v4"] }
urlencoding = "2.1"
